--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "url": "https://github.com/daniyal-abbassi/prisma-passport-basicModel/issues"
   },
   "homepage": "https://github.com/daniyal-abbassi/prisma-passport-basicModel#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^5.1.0"
+  }
 }
