--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/daniyal-abbassi/prisma-passport-basicModel#readme",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.6.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
