--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.2",
+    "passport": "^0.7.0",
     "pg": "^8.14.1"
   }
 }
