--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/daniyal-abbassi/prisma-passport-basicModel#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
