--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@tailwindcss/cli": "^4.1.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "connect-flash": "^0.1.1",
@@ -32,7 +33,8 @@
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "prisma": "^6.5.0"
